* adding transparency config setting for users experiencing performance issues

--- a/TekkenData/frame_data_overlay.config
+++ b/TekkenData/frame_data_overlay.config
@@ -1,2 +1,4 @@
 minimize_on_lost_focus = 1
 indepedent_window_mode = 0
+#Windows 7 users experiencing fps drops, set transparency to 0
+transparency = 1
