* auto detection of windows 7 and disabling transparency * adding padding to UI * changing colors of UI

--- a/TekkenData/frame_data_overlay.config
+++ b/TekkenData/frame_data_overlay.config
@@ -1,4 +1,7 @@
+#Controls whether the window goes away when you alt-tab out of Tekken 7
 minimize_on_lost_focus = 1
+#When set to 1, launches the overlay as a seperate, draggable window for fullscreen users
 indepedent_window_mode = 0
-#Windows 7 users experiencing fps drops, set transparency to 0
-transparency = 1
+#By default, transparency is off for Windows 7 users to improve performance. Default is on For Windows 8/10 users.
+#transparency = 0
+#transparency = 1
