--- a/TekkenData/memory_address.config
+++ b/TekkenData/memory_address.config
@@ -1,5 +1,7 @@
 #If your Tekken.exe is not up to date, uncomment the appropriate player_data_pointer_offset
-#Version 0 (this one's for pirates)
+#Version 0 (Unpatched .exe)
 #player_data_pointer_offset = 0x0337A450
 #Version 1 (June 21st Steam patch)
 #player_data_pointer_offset = 0x03360450
+#Verseion 2 (July 5th Steam patch)
+#player_data_pointer_offset = 0x03362540
