* adding a bunch of marginally useful data including cancel frames, TJ and TC frames, and parryable frames(?) available only through an extended display * changing how TJ frames are calculated * changed how time to sleep until the next update is calculated

--- a/TekkenData/frame_data_overlay.config
+++ b/TekkenData/frame_data_overlay.config
@@ -5,3 +5,6 @@ indepedent_window_mode = 0
 #By default, transparency is off for Windows 7 users to improve performance. Default is on For Windows 8/10 users.
 #transparency = 0
 #transparency = 1
+
+#Data for nerds extends the log to include several new and mostly useless catagories of frame data
+data_for_nerds = 0
