* adding config option for turning off live frame data

--- a/TekkenData/frame_data_overlay.ini
+++ b/TekkenData/frame_data_overlay.ini
@@ -1,8 +1,8 @@
 [DisplaySettings]
 overlay_as_draggable_window = False
 minimize_on_focus_loss = True
-#force_transparency = False
 data_for_nerds = False
+live_frame_data = True
 
 [DataColumns]
 input = True
