* added readme and made it print to console * added two color schemes

--- a/TekkenData/color_scheme.ini
+++ b/TekkenData/color_scheme.ini
@@ -27,6 +27,32 @@ advantage_punishible = orchid2
 advantage_very_punishible = deep pink
 advantage_text = black
 
+[Notepad]
+background = snow
+transparent = white
+p1_text = black
+p2_text = black
+system_text = black
+advantage_plus = snow
+advantage_slight_minus = snow
+advantage_safe_minus = snow
+advantage_punishible = snow
+advantage_very_punishible = snow
+advantage_text = black
+
+[BlackAndWhite]
+background = black
+transparent = white
+p1_text = snow
+p2_text = snow
+system_text = cornsilk2
+advantage_plus = black
+advantage_slight_minus = black
+advantage_safe_minus = black
+advantage_punishible = black
+advantage_very_punishible = black
+advantage_text = snow
+
 [Punish Alert]
 background = black
 transparent = white
