--- a/TekkenData/color_scheme.ini
+++ b/TekkenData/color_scheme.ini
@@ -53,6 +53,19 @@ advantage_punishible = black
 advantage_very_punishible = black
 advantage_text = snow
 
+[Pink]
+background = hot pink
+transparent = white
+p1_text = black
+p2_text = black
+system_text = DeepPink4
+advantage_plus = light steel blue
+advantage_slight_minus = light grey
+advantage_safe_minus = light grey
+advantage_punishible = gray
+advantage_very_punishible = light slate gray
+advantage_text = black
+
 [Punish Alert]
 background = black
 transparent = white
