* ui tweaks (clearer config names, overlay on bottom option)

--- a/TekkenData/frame_data_overlay.ini
+++ b/TekkenData/frame_data_overlay.ini
@@ -1,8 +1,10 @@
 [DisplaySettings]
-overlay_as_draggable_window = False
-minimize_on_focus_loss = True
+overlay_as_draggable_window = 0
+only_appears_when_tekken_7_has_focus = 1
+#transparent_background = 0 #off by default for windows 7, on for 8/10
+overlay_on_bottom = 0
 data_for_nerds = False
-live_frame_data = True
+tiny_live_frame_data_numbers = 1
 
 [DataColumns]
 input = True
