--- a/TekkenData/frame_data_overlay.ini
+++ b/TekkenData/frame_data_overlay.ini
@@ -9,6 +9,7 @@ tiny_live_frame_data_numbers = 1
 [DataColumns]
 input = True
 move_id = False
+name = False
 type = True
 startup = True
 block = True
