--- a/TekkenData/frame_data_overlay.ini
+++ b/TekkenData/frame_data_overlay.ini
@@ -4,7 +4,7 @@ only_appears_when_tekken_7_has_focus = 1
 #transparent_background = 0 #off by default for windows 7, on for 8/10
 overlay_on_bottom = 0
 data_for_nerds = False
-tiny_live_frame_data_numbers = 1
+tiny_live_frame_data_numbers = False
 
 [DataColumns]
 input = True
