* fixing quotation mark error that was making Consolas font not display. * lining up columns correctly now that monospace is working.

--- a/TekkenData/frame_data_overlay.ini
+++ b/TekkenData/frame_data_overlay.ini
@@ -7,18 +7,19 @@ data_for_nerds = False
 tiny_live_frame_data_numbers = False
 
 [DataColumns]
-input = True
-move_id = False
+xcommx = True
+xidx = False
 name = False
-type = True
-startup = True
-block = True
-hit = True
-ch = True
-active = True
-track = True
+xtypexx = True
+xstx = True
+blox = True
+hitx = True
+xchxx = True
+act = True
+track = False
 tot = True
 rec = True
-stun = True
+opp = True
 notes = True
+
 
