--- a/TekkenData/memory_address.ini
+++ b/TekkenData/memory_address.ini
@@ -1,5 +1,5 @@
 [MemoryAddressOffsets]
-player_data_pointer_offset = 0x033FFBC8 #patch 2018-02-22
+player_data_pointer_offset = 0x033FFBC8
 player_data_second_pointer_offset = 0
 p2_data_offset = 0x6850
 p2_end_block_offset = 0xD0
@@ -9,25 +9,18 @@ expected_module_address = 0x140000000 # Might not have to be configurable
 
 
 [GameDataAddress]
-#frame_count = 0x6a0 #resets sometimes on p1 backdash???
-#frame_count = 0x70C #caps at 0xFF
-frame_count = 0x19AD0
+frame_count = 0x19AD0 #resets sometimes on p1 backdash??? caps at 0xFF
 facing = 0xAD4
 timer_in_frames = 0x1A054
 
 
 [EndBlockPlayerDataAddress]
 round_wins = 0x19AEC
-#p2_wins = 0x19BB4
 display_combo_counter = 0x1A0D0
 display_combo_damage = 0x1A0D8
 display_juggle_damage = 0x1A0DC
 total_attacks_made = 0x19B5C #Outdated #NotUsed
 total_moves_blocked = 0x19B5C #Outdated #NotUsed
-#p2_display_combo_counter = 0x19c18
-#p2_display_combo_damage = 0x19c20
-#p2_display_juggle_damage = 0x19c24
-
 
 
 [PlayerDataAddress]
@@ -74,7 +67,6 @@ attack_startup_end = 0x6844
 
 rage_flag = 0x99C
 
-#mystery_state = 0x534
 mystery_state = 0x990 #Possibly Max_Mode #Uncertain Value
 
 juggle_height = 0x11D8 #Outdated #NotUsed
